fix: wide container being too wide on mobile

--- a/apps/juxtaposition-ui/webfiles/web/css/web.scss
+++ b/apps/juxtaposition-ui/webfiles/web/css/web.scss
@@ -1821,6 +1821,10 @@ button.report {
   }
 
 @include t.media(">=tablet", "<desktop") {
+  .container.wide {
+    max-width: 600px;
+  }
+
 	.communities-wrapper {
 		grid-template-columns: repeat(2, minmax(0, 1fr));
 		grid-row-gap: 10px;
